--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
         const numberMatch = m.number && m.number.toString().toLowerCase().includes(lower);
         return nameMatch || numberMatch;
         });
+        /*
 
         // 一致したマーカーだけ map に追加（すでに表示済みはスキップ）
         matches.forEach(m => {
@@ -206,6 +207,7 @@
             }
           });
 
+          */
 
         if (matches.length === 0) {
           searchResults.innerHTML = "<div style='padding:6px; color:#666;'>候補が見つかりません</div>";
@@ -227,6 +229,11 @@
             item.style.backgroundColor = "";
           });
           item.addEventListener("click", () => {
+             // マーカーを map に表示
+            if (!visibleMarkers.includes(m.marker)) {
+              m.marker.setMap(map);
+              visibleMarkers.push(m.marker);
+            }
             map.panTo(m.marker.getPosition());
             map.setZoom(15); // ← ここでズームアップ
             sharedInfoWindow.setContent(m.infoContent);
