3/29 22:01　とりあえず完成

--- a/index.html
+++ b/index.html
@@ -171,12 +171,14 @@
         document.getElementById("loginSection").style.display = "none";
         document.getElementById("mapSection").style.display = "block";
         document.getElementById("areaInfo").style.display = "block";
-        document.getElementById("logoutButton").style.display = "block";
+        document.getElementById("header").style.display = "block";
         loadGoogleMaps();
         logEvent(analytics, 'map_viewed');
       } else {
         document.getElementById("mapSection").style.display = "none";
         document.getElementById("loginSection").style.display = "block";
+        document.getElementById("areaInfo").style.display = "none";
+        document.getElementById("header").style.display = "none";
       }
     });
 
