--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <div id="map"></div>
   </div>
   <div id="areaInfo" style="padding:10px; font-size:16px; background:#f0f0f0; border-top:1px solid #ccc;">
-    地図上のピンか吹き出しをタップするとその情報がここに表示されます。
+    地図上のピンか吹き出しをタップすると情報がここに表示されます。
   </div>
   
 
@@ -268,11 +268,11 @@
 	const areaInfoDiv = document.getElementById("areaInfo");
         //地図を動かすと下記のinfoAreaが下記の文章になる
         map.addListener("dragstart", () => {
-          areaInfoDiv.innerHTML = "地図上のピンをタップするとその情報がここに表示されます。";
+          areaInfoDiv.innerHTML = "地図上のピンをタップすると情報がここに表示されます。";
         });
 
         map.addListener("zoom_changed", () => {
-          areaInfoDiv.innerHTML = "地図上のピンをタップするとその情報がここに表示されます。";
+          areaInfoDiv.innerHTML = "地図上のピンをタップすると情報がここに表示されます。";
         });
 
         sharedInfoWindow = new google.maps.InfoWindow();
