--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
       margin-top: -10px;
       z-index: 9999;
       pointer-events: none;
+      display: none;
     }
     #centerCrosshair::before,
     #centerCrosshair::after {
